--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -31,14 +31,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/"><img src="{% static "images/logo.jpg" alt="img" %}"></a>
+                <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static "images/logo.jpg" alt="img" %}"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Main</a></li>
-                    <li><a href="/contact/">Contacts</a></li>
-                    <li class="active"><a href="/student_list/">Students</a></li>
+                    <li><a href="{% url 'index' %}">Main</a></li>
+                    <li><a href="{% url 'contact' %}">Contacts</a></li>
+                    <li class="active"><a href="{% url 'student_list' %}">Students</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
