--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,1 +1,1 @@
-<li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
+<li><a href="{% url 'detail' question.id %}">{{ question.question_text }}</a></li>
