--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,10 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>Main page</title>
 
-    <!-- Bootstrap -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/css/style.css" rel="stylesheet">
+    {% load staticfiles %}
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -31,17 +32,17 @@
                 <span class="icon-bar"></span>
             </button>
             <ul class="nav navbar-nav">
-                <li><a href="index.html">Main</a></li>
+                <li><a href="{% url 'index' %}">Main</a></li>
             </ul>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="contact.html">Contacts</a></li>
+                <li><a href="{% url 'contact' %}">Contacts</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li><a href="student_list.html">Students</a></li>
+                <li><a href="{% url 'student_list' %}">Students</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
 
@@ -81,6 +82,6 @@
 
 <p>Program content</p>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-<script src="../static/js/bootstrap.min.js"></script>
+<script src="{% static 'js/bootstrap.min.js'%}"></script>
 </body>
 </html>
