--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -10,11 +11,12 @@
     <title>PyBursa - Contacts</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+    
+
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/cover.css" rel="stylesheet">
-
+    <link href="{% static 'css/cover.css' %}" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../static/js/ie-emulation-modes-warning.js"></script>
@@ -40,9 +42,9 @@
               <nav>
                 <ul class="nav masthead-nav">
 
-                  <li><a href="index.html">Main</a></li>
-                  <li class = "active"><a href="contact.html">Contacts</a></li>
-                  <li><a href="student_list.html">Students</a></li>
+                  <li><a href="{% url 'index' %}">Main</a></li>
+                  <li class = "active"><a href="{url 'contact' %}">Contacts</a></li>
+                  <li><a href="{% 'student_list' %}">Students</a></li>
                 </ul>
               </nav>
             </div>
@@ -102,10 +104,10 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
 
 
 </body></html>
