--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,6 +1,6 @@
-{% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,12 +11,11 @@
     <title>PyBursa - Contacts</title>
 
     <!-- Bootstrap core CSS -->
-		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    
-
+    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="{% static 'css/cover.css' %}" rel="stylesheet">
+    <link href="../static/css/cover.css" rel="stylesheet">
+
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="../static/js/ie-emulation-modes-warning.js"></script>
@@ -42,9 +41,9 @@
               <nav>
                 <ul class="nav masthead-nav">
 
-                  <li><a href="{% url 'index' %}">Main</a></li>
-                  <li class = "active"><a href="{url 'contact' %}">Contacts</a></li>
-                  <li><a href="{% 'student_list' %}">Students</a></li>
+                  <li><a href="index.html">Main</a></li>
+                  <li class = "active"><a href="contact.html">Contacts</a></li>
+                  <li><a href="student_list.html">Students</a></li>
                 </ul>
               </nav>
             </div>
@@ -104,10 +103,10 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{% static 'js/jquery.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+    <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
 
 
 </body></html>
