--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -7,18 +8,18 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Py&Django Bursa">
     <meta name="author" content="Ksenia Kolomiets">
-    <link rel="icon" href="../static/images/favicon.ico">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}">
 
     <title>Contacts</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
+    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -38,15 +39,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Py&Django Bursa</a>
+          <a class="navbar-brand" href="{% url 'index' %}">Py&Django Bursa</a>
         </div>
 
 
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts</a></li>
-            <li><a href="student_list.html">Students</a></li>
+            <li><a href="{% url 'index' %}">Main</a></li>
+            <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+            <li><a href="{% url 'student_list' %}">Students</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -59,7 +60,7 @@
       <div class="container">
         <h1>Hello, student!</h1>
         <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-        <p><a class="btn btn-primary btn-lg" href="contact.html" role="button">Learn more »</a></p>
+        <p><a class="btn btn-primary btn-lg" href="{% url 'contact' %}" role="button">Learn more »</a></p>
       </div>
     </div>
 
@@ -73,7 +74,7 @@
           <h4 class ="ksenia-color2">Email: aivanov@gmail.com</h4>
           <h4 class ="ksenia-color1">Phone: 12-34-56</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="contact.html" role="button">View details »</a></p>
+          <p><a class="btn btn-default" href="{% url 'contact' %}" role="button">View details »</a></p>
         </div>
         <div class="col-md-4">
           <h2 class ="ksenia-h2">Manager</h2>
@@ -82,7 +83,7 @@
           <h4 class ="ksenia-color2">Email: ipetrov@gmail.com</h4>
           <h4 class ="ksenia-color1">Phone: 22-33-55</h4>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="contact.html" role="button">View details »</a></p>
+          <p><a class="btn btn-default" href="{% url 'contact' %}" role="button">View details »</a></p>
        </div>
         <div class="col-md-4">
           <h2 class ="ksenia-h2">Founder</h2>
@@ -91,7 +92,7 @@
           <h4 class ="ksenia-color2">Email: jsmith@gmail.com</h4>
           <h4 class ="ksenia-color1">Phone: +38050123456789</h4>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="contact.html" role="button">View details »</a></p>
+          <p><a class="btn btn-default" href="{% url 'contact' %}" role="button">View details »</a></p>
         </div>
       </div>
 
@@ -106,9 +107,9 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="../static/js/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
+    <script src="{% static 'js/jquery.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../static/js/ie10-viewport-bug-workaround.js"></script>
+    <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
   </body>
 </html>
