--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿{% load staticfiles %}
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -11,16 +12,16 @@
     <title>Our Team | Contacts</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static "css/style.css" %}" rel="stylesheet">
 
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="{% static "js/ie-emulation-modes-warning.js" %}"></script>
+    <script src="{% static "js/bootstrap.js" %}"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -39,9 +40,9 @@
         <h3 class="text-muted">Pybursa</h3>
         <nav>
           <ul class="nav nav-justified">
-            <li><a href="index.html">Main</a></li>
-            <li class="active"><a href="contact.html">Contacts</a></li>
-            <li class=><a href="student_list.html">Students</a></li>
+            <li><a href="/">Main</a></li>
+            <li class="active"><a href="{% url 'contact' %}">Contacts</a></li>
+            <li class=><a href="/student_list/">Students</a></li>
           </ul>
         </nav>
       </div>
@@ -57,7 +58,7 @@
       <div class="row">
         <div class="col-lg-4">
           <h2>Manager</h2>
-          <img src="../static/images/director.jpg" class="img-responsive img-rounded">
+          <img src="{% static "images/director.jpg" %}" class="img-responsive img-rounded">
           <p>Manager course</p>
           <p><b>Name:</b> Алена Чайка</p>
           <p>Skype: alena.itbursa</p>
@@ -66,7 +67,7 @@
         </div>
         <div class="col-lg-4">
           <h2>Director</h2>
-          <img src="../static/images/manager.jpg" class="img-responsive img-rounded">
+          <img src="{% static "images/manager.jpg" %}" class="img-responsive img-rounded">
           <p>Director course</p>
           <p><b>Name:</b> Дария Михалевич</p>
           <p>Skype: darka.darka.darka.darka.</p>
@@ -75,7 +76,7 @@
        </div>
         <div class="col-lg-4">
           <h2>Founder</h2>
-          <img src="../static/images/osnovatel.jpg" class="img-responsive img-rounded">
+          <img src="{% static "images/osnovatel.jpg" %}" class="img-responsive img-rounded">
           <p>Founder course</p>
           <p><b>Name:</b> Павел Обод</p>
           <p>Skype: azaless</p>
@@ -93,6 +94,6 @@
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
