--- a/templates/student_detail.html
+++ b/templates/student_detail.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿{% load staticfiles %}
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -9,19 +10,19 @@
     <meta name="author" content="">
 
     <title>PyBursa - detail students</title>
-
+    
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static "css/style.css" %}" rel="stylesheet">
 
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
-    <script src="../static/js/user-scripts.js"></script>
+    <script src="{% static "js/ie-emulation-modes-warning.js"></script>
+    <script src="{% static "js/bootstrap.js" %}"></script>
+    <script src="{% static "js/user-scripts.js" %}"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -39,9 +40,9 @@
         <h3 class="text-muted">Pybursa</h3>
         <nav>
           <ul class="nav nav-justified">
-            <li><a href="index.html">Main</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-            <li><a href="student_list.html">Students</a></li>
+            <li><a href="/">Main</a></li>
+            <li><a href="/contact/">Contacts</a></li>
+            <li><a href="/student_list/">Students</a></li>
           </ul>
         </nav>
       </div>
@@ -49,7 +50,7 @@
       <div class="row">
         <div class="col-md-4">
           <h2>Olena Persianova</h2>
-          <img src="../static/images/olena_p.jpg" class="img-responsive img-rounded">
+          <img src="{% static "images/olena_p.jpg" %}" class="img-responsive img-rounded">
           <hr>
           <table class="table table-hover left table-responsive">
           <thead>
@@ -162,6 +163,6 @@
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
