--- a/templates/student_list.html
+++ b/templates/student_list.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿{% load staticfiles %}
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -11,16 +12,16 @@
     <title>Список студентов PyBursa на 2015 год</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../static/css/bootstrap.css" rel="stylesheet">
+    <link href="{% static "css/bootstrap.css" %}" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../static/css/style.css" rel="stylesheet">
+    <link href="{% static "css/style.css" %}" rel="stylesheet">
 
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../static/js/ie-emulation-modes-warning.js"></script>
-    <script src="../static/js/bootstrap.js"></script>
+    <script src="{% static "js/ie-emulation-modes-warning.js" %}"></script>
+    <script src="{% static "js/bootstrap.js" %}"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -38,9 +39,9 @@
         <h3 class="text-muted">Pybursa</h3>
         <nav>
           <ul class="nav nav-justified">
-            <li><a href="index.html">Main</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-            <li class="active"><a href="student_list.html">Students</a></li>
+            <li><a href="/">Main</a></li>
+            <li><a href="/contact/">Contacts</a></li>
+            <li class="active"><a href="/student_list/">Students</a></li>
           </ul>
         </nav>
       </div>
@@ -63,7 +64,7 @@
       </thead>
       <tbody>
         <tr>
-          <td><a href="student_detail.html">1</a></td>
+          <td><a href="/student_detail/">1</a></td>
           <td>Persianova</td>
           <td>Olena</td>
           <td>Украина, г.Харьков, ул.Иванова, д.36, кв.3</td>
@@ -109,6 +110,6 @@
 
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!--script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
