--- a/quadratic/templates/results.html
+++ b/quadratic/templates/results.html
@@ -1,9 +1,17 @@
 hello world!
 
 <form action="/your-name/?a=dasd" method="post">
-    <label for="your_name">Your name: </label>
-    <input id="your_name" type="text" name="your_name" value="{{ current_name }}">
+    <label for="your_name">a: </label>
+	<input type="text" name="a">
+	<label for="your_name">b: </label>
+	<input type="text" name="b">
+	<label for="your_name">c: </label>
+	<input type="text" name="c">
     <input type="submit" value="OK">
 </form>
 
 https://docs.djangoproject.com/en/1.8/topics/forms/
+
+
+
+
